fixed button overlap with unity

--- a/static/mycss.css
+++ b/static/mycss.css
@@ -1,5 +1,5 @@
 body{
-    min-width: 1210px;
+    min-width: 1350px;
 }
 @media (min-width: 1200px) {
 
@@ -603,36 +603,32 @@ overflow-wrap:break-word  ;
     color: white;
     font-size : 33px;
     z-index:100;
-
-}
-#submit-match-answer{
-    bottom:10%;
-    right:10%;
-    position:absolute;
-
-}
-#submit-multi-answer{
-    position:relative;
+     position:relative;
     float: right;
     margin-bottom:10px;
     margin-top:5px;
+    margin-right:25px;
 
 }
+#submit-match-answer{
+}
+#submit-multi-answer{
+}
+/*#report-answer{*/
+    /*position:absolute;*/
+    /*bottom:30%;*/
+    /*right:10%;*/
+    /*color:#4D8496;*/
+    /*font-size: 33px;*/
+
+/*}*/
 #report-answer{
-    position:absolute;
-    bottom:30%;
-    right:10%;
-    color:#4D8496;
-    font-size: 33px;
-
-}
-#report-multi-answer{
     position:absolute;
     right:20%;
     bottom:15px;
     /*height:auto;*/
     font-size: 33px;
-
+    /*border: 1px solid red;*/
     color:#4D8496;
 }
 
